--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -11,3 +11,8 @@ unbind '"'
 unbind %
 # toggle synchronize-panes
 bind M-s setw synchronize-panes
+# set sync color change
+setw -g window-status-current-format '#{?pane_synchronized,#[bg=red],}#I:#W'
+setw -g window-status-format         '#{?pane_synchronized,#[bg=red],}#I:#W'
+# set current window name color
+setw -g window-status-current-fg 'white'
