added changes when panel is zommed

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -14,5 +14,7 @@ bind M-s setw synchronize-panes
 # set sync color change
 setw -g window-status-current-format '#{?pane_synchronized,#[bg=red],}#I:#W'
 setw -g window-status-format         '#{?pane_synchronized,#[bg=red],}#I:#W'
+# set zoom color change
+setw -g window-status-current-format '#{?window_zoomed_flag,#[bg=blue],}#I:#W'
 # set current window name color
 setw -g window-status-current-fg 'white'
