zoom and sync colors now works

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -11,10 +11,8 @@ unbind '"'
 unbind %
 # toggle synchronize-panes
 bind M-s setw synchronize-panes
-# set sync color change
-setw -g window-status-current-format '#{?pane_synchronized,#[bg=red],}#I:#W'
+# set sync and zoom color change
+setw -g window-status-current-format '#{?pane_synchronized,#[bg=red],}#{?window_zoomed_flag,#[bg=blue],}#I:#W'
 setw -g window-status-format         '#{?pane_synchronized,#[bg=red],}#I:#W'
-# set zoom color change
-setw -g window-status-current-format '#{?window_zoomed_flag,#[bg=blue],}#I:#W'
 # set current window name color
 setw -g window-status-current-fg 'white'
